couple styling tweaks to fix overflow problems in resizer (and editor)

--- a/src/style/top-level-container-styles.css
+++ b/src/style/top-level-container-styles.css
@@ -22,6 +22,10 @@ div#panes-container {
   flex-grow: 1;
   display: flex;
   flex-direction: row;
+  /* the following prevents #panes-container from having a computed
+  height greater than the available space, which is needed for correct
+  overflow of child elts*/
+  overflow: hidden;
 }
 
 div#editor-react-root{
@@ -31,11 +35,14 @@ div#editor-react-root{
 
 div#cells-resizer {
   max-width: 100%; /* this keeps #cells at full width of #editor-react-root */
+  min-height: 100%;
+  max-height: 100%;
 }
 
 div#cells {
+  flex-grow: 1; /* grow cells to fill the #cell-resizer flex column */
   box-sizing: border-box;
-  height: 100%;
+  /*height: 100%;*/
   overflow-y: auto;
   padding-top: 40px;
   padding-left: 25px;
